--- a/One-Page Website/CSS/one_page_website.css
+++ b/One-Page Website/CSS/one_page_website.css
@@ -93,6 +93,7 @@ p {
     height: 105px;
     max-height: 340px;
     display: block;
+    z-index: 1;
 }
 
 .container {
@@ -397,6 +398,7 @@ Light Box Conatiner
     right: 25px;
     font-size: 35px;
     font-weight: bold;
+    z-index: 100;
 }
 
 .close:hover,
